--- a/sections/100days-page.liquid
+++ b/sections/100days-page.liquid
@@ -20,7 +20,7 @@
     <h2 class="h2Spacing">How It Works</h2>
     <div class="trial-cols">
         <div class="trial-col">
-            <img src="{{ 'trial-order.svg' | asset_url }}" alt="" loading="lazy" />
+            <img src="{{ 'trial-order.svg' | asset_url }}" alt="" loading="lazy"  width="45" height="45" />
             <cms id='cms1a'>
 
 
@@ -29,14 +29,14 @@
 </cms cms1a>
         </div>
         <div class="trial-col">
-            <img src="{{ 'trial-explore.svg' | asset_url }}" alt="" loading="lazy" />
+            <img src="{{ 'trial-explore.svg' | asset_url }}" alt="" loading="lazy" width="45" height="45" />
             <cms id='cms1b'>
             <div class="trial-head">Explore</div>
             <p>Enjoy the relaxation and power of infrared sauna therapy at home.</p>
             </cms cms1b>
         </div>
         <div class="trial-col">
-            <img src="{{ 'trial-return.svg' | asset_url }}" alt="" loading="lazy" />
+            <img src="{{ 'trial-return.svg' | asset_url }}" alt="" loading="lazy" width="45" height="45" />
             <cms id='cms1c'>
 
 
