--- a/assets/customer.css
+++ b/assets/customer.css
@@ -1,3 +1,8 @@
+.customer h1, .customer h2, .customer h3, .customer h4 {
+  text-transform: capitalize;
+  font-weight: 700;
+}
+
 .customer:not(.account):not(.order) {
   margin: 6rem auto 9rem;
   max-width: 33.4rem;
@@ -9,6 +14,24 @@
   .customer:not(.account):not(.order) {
     max-width: 47.8rem;
   }
+}
+.field__label, .customer .field label {
+  font-family: 'IBM Plex Mono', monospace !important;
+  font-weight: 400;
+}
+.field__input, .customer .field input {
+  font-family: 'IBM Plex Mono', monospace !important;
+  font-weight: 400;
+  background-color: white;
+  color: #333333;
+  border-color: #d9d9d9;
+}
+
+.customer .field input:focus, .customer .field input:hover {
+  outline: none;
+  border-color: #c67a26;
+  -webkit-box-shadow: 0 0 0 1px #c67a26;
+  box-shadow: 0 0 0 1px #c67a26;
 }
 
 .customer form {
@@ -67,7 +90,6 @@
 @media screen and (min-width: 750px) {
   .customer table {
     border: none;
-    box-shadow: 0 0 0 0.1rem rgba(var(--color-foreground), 0.08);
   }
 }
 
@@ -87,6 +109,7 @@
   font-weight: 400;
   line-height: 1;
   border: none;
+  font-size: 14px;
   padding: 0;
 }
 
@@ -154,7 +177,9 @@
 }
 
 .customer tbody tr {
-  border-top: 0.01rem solid rgba(var(--color-foreground), 0.08);
+  /* border-top: 0.01rem solid rgba(var(--color-foreground), 0.08); */
+  font-size: 14px;
+  border-bottom: 1px solid #939393;
 }
 
 @media screen and (min-width: 750px) {
@@ -471,13 +496,13 @@
     text-align: right;
   }
 
-  .account table td:first-of-type {
+  /* .account table td:first-of-type {
     padding-top: 1.2rem;
     padding-bottom: 1.2rem;
-  }
+  } */
 }
 
-.account table td:first-of-type a {
+/* .account table td:first-of-type a {
   padding: 1.1rem 1.5rem;
   text-decoration: none;
   box-shadow: 0 0 0 0.1rem rgba(var(--color-link), 0.2);
@@ -487,10 +512,11 @@
 
 .account table td:first-of-type a:hover {
   box-shadow: 0 0 0 0.2rem rgba(var(--color-link), 0.2);
-}
+} */
 
 .order td:first-of-type {
   align-items: initial;
+  font-size: 14px;
 }
 
 @media screen and (min-width: 750px) {
@@ -502,7 +528,6 @@
 
 .order tfoot tr:last-of-type td,
 .order tfoot tr:last-of-type th {
-  font-size: 2.2rem;
   padding-top: 1.5rem;
   padding-bottom: 4rem;
 }
@@ -592,7 +617,13 @@
 
 .order table a {
   line-height: calc(1 + 0.3 / var(--font-body-scale));
+  text-decoration: none;
 }
+
+.order table a:hover {
+  text-decoration: underline;
+}
+
 
 .order tbody tr:first-of-type td:first-of-type > div {
   display: flex;
