targeted therapy to photon therapy

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -51,7 +51,7 @@
   }
 
   .dark .research-links h3, .dark .what-is, .dark .story, .dark .gHjTpK.gHjTpK, .dark .compatible h2, .dark .compatible, .dark .optimize h2, 
-  .dark .optimize, .dark .story blockquote,
+  .dark .optimize, .dark .story blockquote, .dark .etica,
   .dark .intro p, .dark .intro a, .dark .people h3, .dark .people h2, .dark .people p,
   .dark .self p, .dark .self a, .dark .self h3, .dark .openings a, .dark .opening p, 
   .dark .opening a, .dark .opening h3, .dark .opening ul, .dark .opening li, 
