--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -41,7 +41,7 @@
 					<div class="fl-col">
 						<div class="fl-head">Shop</div>
 						<a href="/pages/infrared-saunas">Saunas</a>
-						<a href="/pages/targeted-therapy">Targeted Therapy</a>
+						<a href="/pages/targeted-therapy">Photon Therapy</a>
 						<a href="/pages/sauna-components">Sauna Components</a>
 						<a href="/products?filter=replacement-bulbs">Bulbs</a>
 						<a href="/products?filter=merchandise">Merchandise</a>
