--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -285,7 +285,7 @@ and (min-width: 750px) { .section-header { margin-bottom:
         <a
           href="/pages/targeted-therapy"
           class="sg-link nav-targeted-therapy"
-          ><div class="sgl-text nav-link-arrow">Targeted Therapy</div></a
+          ><div class="sgl-text nav-link-arrow">Photon Therapy</div></a
         >
         <a
           href="/pages/sauna-components"
