--- a/sections/refurb-page.liquid
+++ b/sections/refurb-page.liquid
@@ -57,7 +57,7 @@
 
 			<section>
 					<div class="short-content">
-						<p class="etica">Sorry, there are no refurbished items available right now. Check again soon or explore <a href="/products">new equipment</a>.
+						<p class="etica">Sorry, there are no refurbished items available right now. Check again soon or explore <a href="/products?filter=all">new equipment</a>.
 					</div>
 			</section>
 
