--- a/sections/targeted-page.liquid
+++ b/sections/targeted-page.liquid
@@ -5,7 +5,8 @@
 		<div class="ph-width">
 			<div class="ph-text">
 				<cms id='cms0'>
-				<h1>Experience Relief Anywhere</h1>
+				<h1>Photon<span>&#174;</span> Infrared Therapy Light</h1>
+				<h3>Experience Relief Anywhere</h3>
 				<p class="etica">At home, at work, and on the road, the Photon shines as your portable infrared therapy oasis. Discover the many ways this one-light wonder can brighten your day.</p>
 				</cms cms0>
 			</div>
@@ -79,7 +80,7 @@
 		</div>
 
 		<section>
-			<h2 class="alignLeft">Shop Targeted Therapy</h2>
+			<h2 class="alignLeft">Shop Photon Therapy</h2>
 				<div class="product-tiles">
 						<!--the include below is looking for rsRP -->
 						
