--- a/assets/customer.css
+++ b/assets/customer.css
@@ -15,7 +15,7 @@
     max-width: 47.8rem;
   }
 }
-.field__label, .customer .field label {
+.field__label, .customer .field label, .addresses label {
   font-family: 'IBM Plex Mono', monospace !important;
   font-weight: 400;
 }
@@ -23,6 +23,7 @@
   font-family: 'IBM Plex Mono', monospace !important;
   font-weight: 400;
   background-color: white;
+  padding-bottom: 0.3571428571em;
   color: #333333;
   border-color: #d9d9d9;
 }
@@ -131,7 +132,7 @@
 .customer thead th {
   font-size: 1.2rem;
   letter-spacing: 0.07rem;
-  text-transform: uppercase;
+  font-weight: 700;
 }
 
 .customer tbody td:first-of-type {
@@ -488,6 +489,10 @@
   width: 1.5rem;
   margin-bottom: -0.03rem;
   margin-right: 1rem;
+}
+
+.order-history thead tr {
+  border-bottom: 1px solid #939393;
 }
 
 @media screen and (min-width: 750px) {
