--- a/snippets/pay-over-time.liquid
+++ b/snippets/pay-over-time.liquid
@@ -3,13 +3,13 @@
     <div class="pot-col">
         <img src="{{ 'splitit.svg' | asset_url }}" width="60" alt="SplitIt" loading="lazy" />
         <span data-ml="splitItSummary"><p>Monthly payments using your credit card. 0% interest.</p></span>
-        <a href="javascript:void(0)" onClick="potMore('splitit')">Learn More</a>
+        <a href="javascript:void(0)"  class="potbtn" data-pot="splitit">Learn More</a>
     </div>
     <div class="pot-divider"></div>
     <div class="pot-col">
         <img src="{{ 'bread.png' | asset_url }}" width="60" alt="Bread Financing" loading="lazy" />
         <span data-ml="breadSummary"><p>Simple loan with monthly payments as low as 0% APR for 6 months.*</p></span>
-        <a href="javascript:void(0)" onClick="potMore('bread')">Learn More</a>
+        <a href="javascript:void(0)"  class="potbtn" data-pot="bread">Learn More</a>
     </div>
     <div class="pot-col-100 hideMe" id="splititCol">
         <a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15" loading="lazy" /></a>
@@ -34,9 +34,12 @@ $(".pot-col-100").on("click",function() {
 });
 
 
-function potMore(f) {
+$( ".potbtn" ).on( "click", potMore );
+
+function potMore() {
+    var pot_type =  $(this).attr("data-pot");
 	$(".pot-col").addClass("hideMe");
-	$("#" + f + "Col").removeClass("hideMe");
+	$("#" + pot_type + "Col").removeClass("hideMe");
 }
 
 
