hotfix - product page, shipping text above fold, adding youtube video to farday and luminati

--- a/sections/financing-page.liquid
+++ b/sections/financing-page.liquid
@@ -11,7 +11,7 @@
 
 
 <h1>Sauna Now, Pay Over Time</h1>
-<p class="etica">Experience the benefits of full-spectrum infrared therapy as soon as possible with rates as low as 0%&nbsp;APR for 6 months, when financing with Bread.*</p>
+<p class="etica">Experience the benefits of full-spectrum infrared therapy now and pay later with with flexible payment options.*</p>
 </cms cms0>
         </div>
     </div>
@@ -43,16 +43,17 @@
             <p class="fineprint">You can choose this option at checkout.</p>
         </div>
         <div class="col col-bordered">
-            <img src="{{ 'bread.png' | asset_url }}" style="width: 75px;" alt="Bread Financing" loading="lazy" />
+            <img src="{{ 'shop-pay.svg' | asset_url }}" style="width: 175px;" alt="Shop Pay Installments" loading="lazy" />
             <cms id='cms3'>
 
 
 
 <ul>
-<li>Starting at 0% APR for 6 months*</li>
+<li>4 interest-free payments every two weeks</li>
+<li>Interest-bearing options for up to 12 months*</li>
 <li>Traditional installation loan</li>
 <li>Check your rate without affecting your credit score</li>
-<li>Check your eligibility in minutes</li>
+<li>Check your eligibility in seconds</li>
 </ul>
 </cms cms3>
             <p class="fineprint">You can choose this option at checkout.</p>
@@ -69,7 +70,7 @@
 <div class="trial-cols">
 <div class="trial-col">
 <div class="trial-head">Apply in seconds</div>
-<p>See your options without impacting your credit score.</p>
+<p>See your options in checkout without impacting your credit score.</p>
 </div>
 <div class="trial-col">
 <div class="trial-head">Choose your plan</div>
@@ -77,7 +78,7 @@
 </div>
 <div class="trial-col">
 <div class="trial-head">Complete your order</div>
-<p>During the payment step of checkout, select Bread® or Splitit and log in.</p>
+<p>During the payment step of checkout, select Shop Pay or Splitit.</p>
 </div>
 </div>
 </cms cms4>
@@ -96,7 +97,7 @@
 
 <h2 class="alignLeft">Why choose financing?</h2>
 <p><strong>Comfortable payments</strong><br>Skip the stress. Pay for your sauna on a schedule that fits your lifestyle.</p>
-<p><strong>Budget-friendly terms</strong><br>With 0% options available for 6 months, you can pay over time without paying extra.*</p><p><strong>No lost time</strong><br>Flexible financing helps you relax and rejuvenate now.
+<p><strong>Budget-friendly terms</strong><br>With 0% options available, you can pay over time without paying extra.*</p><p><strong>No lost time</strong><br>Flexible financing helps you relax and rejuvenate now.
 </p></cms cms5>
         </div>
     </div>
@@ -109,15 +110,15 @@
         <div class="col col-centered">
             <img src="{{ 'splitit.svg' | asset_url }}" style="width: 75px;" alt="SplitIt" loading="lazy" />
                 <cms id='cms6a'>
-<p>For questions, check <a href="https://www.splitit.com/faq/shoppers/" target="_blank">Splitit’s FAQ</a> or reach Splitit directly at <a href="mailto:support@splitit.com">support@splitit.com</a> or <a href="tel:18447754848">(844) 775-4848</a>.</p>
+<p>For questions, check <a href="https://www.splitit.com/faq/shoppers/" target="_blank">Splitit’s FAQ</a> or reach Splitit directly at <a href="mailto:support@splitit.com" target="_blank">support@splitit.com</a> or <a href="tel:18447754848" target="_blank">(844) 775-4848</a>.</p>
 </cms cms6a>
         </div>
         <div class="col col-centered">
-            <img src="{{ 'bread.png' | asset_url }}" style="width: 75px;" alt="Bread Financing"  loading="lazy"/>
+            <img src="{{ 'shop-pay.svg' | asset_url }}" style="width: 75px;" alt="Shop Pay Installments"  loading="lazy"/>
             <cms id='cms6b'>
 
 
-<p>For questions, check <a href="https://www.breadpayments.com/shoppers-faq/" target="_blank">Bread<sup>®</sup>'s FAQ</a> or reach Bread® directly at <a href="mailto:support@breadpayments.com">support@breadpayments.com</a> or <a href="tel:18449927323">(844) 992-7323</a>.</p>
+<p>For questions, check <a href="https://shoppay.affirm.com/help/s/" target="_blank">Shop Pay Installment's FAQ</a> or reach Shop Pay directly at <a href="https://shoppay.affirm.com/help/s/contact-us" target="_blank">shoppay.affirm.com</a>.</p>
 </cms cms6b>
         </div>
     </div>
@@ -132,7 +133,7 @@
 <p><strong>SplitIt</strong><br>At the time of purchase, once SaunaSpace confirms your shipment, you will only be charged for the first payment. The remaining balance will be held on your credit card until the final payment is made. After each monthly payment, the amount held from your available balance will be reduced to the new remaining balance (the held amount might appear as “pending”).</p>
 <p>To be eligible, you must own a VISA or MasterCard credit card and have the entire amount of your purchase available on your card.</p>
 <p>Splitit will not charge you interest or fees. Other potential interest, fees and/or charges may apply from your credit card issuer.</p>
-<p><strong>Bread®</strong><br>*Subject to approval of credit application. Rates range from 0% to 29.99% APR, resulting in, for example, 24 monthly payments of $46.14 at 9.99% APR, per $1,000 borrowed. APRs will vary depending on credit qualifications, loan amount, and term. Bread<sup>®</sup> pay-over-time plans are loans made by Comenity Capital Bank.</p>
+<p><strong>Shop Pay Installments</strong><br>*Rates from 0% APR or 10-30% APR. Payment options through Shop Pay Installments are subject to an eligibility check and are provided by these lending partners: <a href="https://www.affirm.com/lenders" target="_blank">affirm.com/lenders</a>. Options depend on your purchase amount, and a down payment may be required. State notices to consumers <a href="https://www.affirm.com/licenses" target="_blank">affirm.com/licenses</a>. If you finance your purchase with Affirm, your first payment is due approximately two weeks after your purchase is finalized. Please note that due to extended delivery times, your loan payment(s) may be due before you receive your purchase.</p>
 </cms cms7>
 </div>
 </section>
