--- a/sections/returns-page.liquid
+++ b/sections/returns-page.liquid
@@ -74,15 +74,7 @@
 </ul>
 
 <h3>Taxes, fees, and customs</h3>
-<p>SaunaSpace does not collect Canadian sales tax, customs duty, or related handling fees on your behalf. Once your items arrive, you will be notified and asked to pay for these charges at the post office.</p>
-
-<ul>
-<li><strong>Canadian Sales Tax:</strong> All shipments to Canada are subject to the destination province's combined sales tax. The Canadian sales taxes include the Provincial Sales Tax (PST), the Quebec Sales Tax (QST), the Goods and Services Tax (GST), and the Harmonized Sales Tax (HST) which is a combination of the provincial sales tax portion and the GST in some provinces. Learn more about <a href="https://www.fedex.com/en-ca/news/canadian-sales-taxes.html" target="_blank">Canadian Sales Tax</a>.</li>
-<li><strong>Duty:</strong> Under the United States-Mexico-Canada Agreement (USMCA), all our saunas, panels and sauna components are eligible to import into Canada with preferential duty treatment, but we cannot guarantee this. All shipments to Canada are accompanied by an electronically submitted Customs Invoice and Declaration of Origin stating which goods, if applicable, are of USA manufacture. Learn more about the <a href="https://www.fedex.com/en-us/shipping/international/usmca-trade.html" target="_blank">USMCA</a>.</li>
-<li><strong>Self-Brokering:</strong> If you wish to self-broker, you can. Learn more about <a href="https://www.cbsa-asfc.gc.ca/import/courier/lvs-efv/prsn-eng.html" target="_blank">importing goods for personal use</a>.</li>
-<li><strong>Handling Fees:</strong> See FedEx’s current <a href="https://www.fedex.com/en-us/shipping/international-ground-canada.html" target="_blank">Clearance Entry Fees</a>.</li>
-</ul>
-
+<p>SaunaSpace&nbsp;now collects Canadian sales tax, customs duty, or related handling fees on your behalf.</p>
 
 <h3>Looking for the status of your order?</h3>
 <p>Check your inbox for tracking details or email us at <a href="mailto:support@sauna.space">hello@sauna.space</a>.
@@ -117,8 +109,47 @@ Columbia, MO 65202 USA</p>
 </ul>
 
 <h3>Taxes and Customs</h3>
-<p>SaunaSpace does not collect taxes, customs duty, or related handling fees on your behalf. Please refer to your country’s customs policies and your selected mail carrier’s brokerage policies for more information on the charges that may be due when you import your items.</p>
-
+<p>SaunaSpace&nbsp;automatically collects taxes, customs duty,&nbsp;and related handling fees on your behalf during checkout. Please&nbsp;note that this service is not currently offered for shipment to the following countries:</p>
+<p>Africa</p>
+<ul>
+<li>Republic of Cabo Verde (CV)</li>
+<li>Republic of the Sudan (SD)</li>
+<li>Republic of South Sudan (SS)</li>
+<li>Federal Republic of Somalia (SO)</li>
+</ul>
+<p>Antarctica</p>
+<ul>
+<li>South Georgia and the South Sandwich Islands (GS)</li>
+</ul>
+<p>Asia</p>
+<ul>
+<li>Republic of Iraq (IQ)</li>
+<li>Syrian Arab Republic (SY)</li>
+<li>Democratic Republic of Timor-Leste (East Timor) (TL)</li>
+<li>Turkmenistan (TM)</li>
+</ul>
+<p>Europe</p>
+<ul>
+<li>Northern Ireland (XI)</li>
+<li>Russian Federation (RUS)</li>
+</ul>
+<p>Oceania</p>
+<ul>
+<li>Federated States of Micronesia (FM)</li>
+<li>Republic of the Marshall Islands (MH)</li>
+<li>Republic of Palau (PW)</li>
+</ul>
+<p>North America</p>
+<ul>
+<li>Territorial Collectivity of Saint-Pierre and Miquelon (PM)</li>
+<li>Commonwealth of Puerto Rico (PR)</li>
+</ul>
+<p>South America</p>
+<ul>
+<li>Federative Republic of Brazil (BR)</li>
+<li>Falkland Islands (FK)</li>
+</ul>
+<p>For these aforementioned countries, we ship DDU (Deliver-Duty-Unpaid) meaning you will need to pay your own customs duties, VAT and associated fees after arrival of your shipment to your country and before final delivery.</p>
 <h3>Looking for the status of your order?</h3>
 <p>Check your inbox for tracking details or email us at <a href="mailto:hello@sauna.space">hello@sauna.space</a>.
 
