--- a/sections/faraday-product.liquid
+++ b/sections/faraday-product.liquid
@@ -233,16 +233,6 @@
             <div class="no-js-hidden" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
               {%- render 'price', product: product, use_variant: true, show_badges: true, price_class: 'price--large' -%}
             </div>
-            {%- if shop.taxes_included or shop.shipping_policy.body != blank -%}
-              <div class="product__tax caption rte">
-                {%- if shop.taxes_included -%}
-                  {{ 'products.product.include_taxes' | t }}
-                {%- endif -%}
-                {%- if shop.shipping_policy.body != blank -%}
-                  {{ 'products.product.shipping_policy_html' | t: link: shop.shipping_policy.url }}
-                {%- endif -%}
-              </div>
-            {%- endif -%}
             <div {{ block.shopify_attributes }}>
               {%- form 'product', product, id: 'product-form-installment', class: 'installment caption-large' -%}
                 <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
@@ -437,7 +427,7 @@
                 </div>
                 <div class="pot-divider"></div>
                 <div class="pot-col">
-                    <img src="{{ 'bread.png' | asset_url }}" width="60" alt="Bread Financing" loading="lazy" />
+                    <img src="{{ 'shop-pay.svg' | asset_url }}" width="60" alt="Bread Financing" loading="lazy" />
                     <span data-ml="breadSummary"><p>Simple loan with monthly payments as low as 0% APR for 6 months.*</p></span>
                     <a href="javascript:void(0)" onClick="potMore('bread')">Learn More</a>
                 </div>
@@ -449,7 +439,7 @@
                 </div>
                 <div class="pot-col-100 hideMe" id="breadCol">
                     <a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15"  loading="lazy"/></a>
-                    <img src="{{ 'bread.png' | asset_url }}" width="70" alt="Bread Financing" />
+                    <img src="{{ 'shop-pay.svg' | asset_url }}" width="70" alt="Bread Financing" />
                     <span data-ml="breadText"><ul><li>Starting at 0% APR for 6 months*</li><li>Traditional installment loan</li><li>Check your rate without affecting your credit score</li></ul><p>*Subject to approval of credit application. Rates range from 0% to 29.99% APR, resulting in, for example, 24 monthly payments of $46.14 at 9.99% APR, per $1,000 borrowed. APRs will vary depending on credit qualifications, loan amount, and term. Bread<sup>®</sup>&nbsp;pay-over-time plans are loans made by Comenity Capital Bank.</p></span>
                     <p class="fineprint">Check your eligibility in minutes at checkout.</p>
                 </div>
