--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -245,13 +245,8 @@ and (min-width: 750px) { .section-header { margin-bottom:
         </a>
       </div>
     </div>
-    
- 
-
-    <div class="nav-right">
-      {% render 'go-cart-button' %}
-
-      <!-- <a
+    <a href="javascript:void(0)" class="nav-right">
+      <a
         href="{{ routes.cart_url }}"
         class="header__icon header__icon--cart link focus-inset nav-cart aa"
         id="cart-icon-bubble"
@@ -274,8 +269,8 @@ and (min-width: 750px) { .section-header { margin-bottom:
         </div> 
         {%- endif -%}
       </a>
-      <div class="nav-full-cart hideMe"></div> -->
-    </div>
+      <div class="nav-full-cart hideMe"></div>
+    </a>
   </div>
   <!--nav-wrap-->
 </div>
