brian changes and removal of gocart js on production since no ready for deployment
Former-commit-id: c5ca12d26ed201be859360a383e6e6117d26e077
Former-commit-id: a76fc83f90e2abfd816f6a7e2a3e50337d005de9
Former-commit-id: 599e60cf34925b8a22ec5af2060a8736d005614f
Former-commit-id: 97cf95023ce0379ef230f0d6cc78897c78f40d6b
Former-commit-id: 409a90ebc338d338087a0340178b1003234116cd

--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -59,10 +59,10 @@
 
 <div class="tanBG">
 <div class="contact-tiles">
-  <a href="https://help.sauna.space/order-status" class="contact-tile">
+  <a onclick="GorgiasChat.open()" class="contact-tile">
     <div class="ct-text">
-      <div class="ct-head">Order Status</div>
-      <div class="ct-link arrow-link">View order status FAQ</div>
+      <div class="ct-head">View Order Status</div>
+      <div class="ct-link arrow-link">Manage your order</div>
     </div>
   </a>
   <a href="/pages/shipping-and-returns" class="contact-tile">
@@ -90,7 +90,7 @@
   <div class="oc-text oc-text-contact">
     <cms id='cms2'>
     <h2 class="alignLeft">Stop by for a visit.</h2>
-    <p>Want to see the SaunaSpace magic for yourself? Our facility in Columbia, MO, is open for showroom demonstrations and local pickup.</p>
+    <p>Want to see the SaunaSpace magic for yourself? Our Retail Store in Columbia, MO, is open for showroom demonstrations and local pickup.</p>
     <p class="etica geo-pin">905 Clinkscales Rd, Columbia, MO 65203, USA</p>
     </cms cms2>
   </div>
@@ -106,14 +106,14 @@
       <cms id='cms4'>
 <h3>Join the SaunaSpace team</h3>
 <p>We take our employees’ happiness as seriously as our customers’ wellbeing. Learn what it means to be part of a hardworking, imaginative team.</p>
-<a href="https://sauna.space/pages/careers">View Openings</a>
+<a href="/pages/careers">View Openings</a>
 </cms cms4>
     </div>
     <div class="col col-bordered col-bordered-center">
       <cms id='cms5'>
       <h3>Become an affiliate partner</h3>
       <p>Bring the healing power of near infrared light sauna therapy to your family, friends, and connections.</p>
-      <a href="https://saunaspace.refersion.com" >Apply Now</a>
+      <a href="https://affiliate.sauna.space">Apply Now</a>
       </cms cms5>
     </div>
   </div>
