--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -78,7 +78,7 @@
 						<div class="fl-head">Company</div>
 						<a href="/pages/about">About Us</a>
 						<a href="/pages/events">Events</a>
-						<a href="https://saunaspace.refersion.com/">Affiliate Program</a>
+						<a href="https://affiliate.sauna.space/">Affiliate Program</a>
 						<a href="https://sauna.space/pages/careers">Jobs</a>
 					</div>
 				</div>
